methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:3: error: not found: value faireV
  faireV(c:Color){
  ^MethodsPicture:3: error: not found: value c
  faireV(c:Color){
         ^MethodsPicture:4: error: not found: value c
    setCouleurBrosse(c)
                     ^MethodsPicture:7: error: not found: value avnce
    recule() ; droite() ; avnce() ; baisseBrosse() ; leveBrosse()
                          ^MethodsPicture:11: error: not found: value faireCarre
  faireCarre(){
  ^MethodsPicture:12: error: not found: value faireV
    faireV(YELLOW)
    ^MethodsPicture:12: error: not found: value YELLOW
    faireV(YELLOW)
           ^MethodsPicture:13: error: not found: value faireV
    faireV(RED)
    ^MethodsPicture:13: error: not found: value RED
    faireV(RED)
           ^MethodsPicture:14: error: not found: value faireV
    faireV(BLUE)
    ^MethodsPicture:14: error: not found: value BLUE
    faireV(BLUE)
           ^MethodsPicture:15: error: not found: value faireV
    faireV(GREEN)
    ^MethodsPicture:15: error: not found: value GREEN
    faireV(GREEN)
           ^MethodsPicture:18: error: not found: value changerCarre
  changerCarre(){
  ^MethodsPicture:24: error: not found: value changerLigne
  changerLigne(){
  ^