methods.picture.MethodsPicture.scala.code
override def run() {
  
  faireV(c:Color){
    setCouleurBrosse(c)
    avance() ; avance() ; baisseBrosse() ; leveBrosse()
    avance() ; gauche() ; avance() ; baisseBrosse() ; leveBrosse()
    recule() ; droite() ; avnce() ; baisseBrosse() ; leveBrosse()
    avance() ; gauche()
  }
  
  faireCarre(){
    faireV(YELLOW)
    faireV(RED)
    faireV(BLUE)
    faireV(GREEN)
  }
  
  changerCarre(){
    for (k <-1 to 5){
      avance()
    }
  }
  
  changerLigne(){
    gauche()
    for (k <-1 to 5){
      avance()
    }
    droite()
  }
}